--- a/index.html
+++ b/index.html
@@ -5,10 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>food-network</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 
 </head>
 <body>
+    <section id="order-top">
+        <div class="order-top-inner">
+            <div class="order-top-left">
+                <h1><span>Skip </span> The Diet,<br> Just Eat Healthy <br> With Food Network </h1>  
+                <p>Imagine you don't need a diet because we provide <br>  healthy and delicious food for you!</p> 
+                <a class="primary-btn" href="#" target="_blank">order food</a>     
+            </div>
+            <div class="order-top-right">
+                <img src="images/female/order-top.png" alt="order-food">
+            </div>
+        </div>
+    </section>
     
 </body>
 </html>
