--- a/index.html
+++ b/index.html
@@ -24,6 +24,51 @@
             </div>
         </div>
     </section>
+    <section id="about-me">
+        <div class="about-me-inner">
+            <div class="about-me-left">
+                <img src="images/female/about-me-left.png" alt="about-me">
+            </div>
+            <div class="about-me-right">
+                <h2>about me</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing 
+                elit. Condimentum diam orci pretium a pharetra, 
+                feugiat cursus. Dictumst risus, sem egestas odio cras 
+                adipiscing vulputate. Nisi, risus in suscipit non. Non 
+                commodo volutpat, pharetra, vel.</p>
+                <a class="primary-btn" href="#" target="_blank">contact me</a>
+            </div>
+        </div>
+    </section>
+    <section id="My-recipies">
+        <div class="section-title"></div>
+        <div class="my-recipies-inner">
+            <div class="my-recipies-one">
+                <img src="images/food/my-recipies1.jpg" alt="My-recipies-item">
+                <h4>Recipie Title</h4>
+                <p>Lorem ipsum dolor sit amet, 
+                consectetur adipiscing elit. Lacus, 
+                fermentum amet faucibus sed id nisi 
+                lectus at.</p>
+            </div>
+            <div class="my-recipies-one">
+                <img src="images/food/my-recipies2.png" alt="My-recipies-item">
+                <h4>Recipie Title</h4>
+                <p>Lorem ipsum dolor sit amet, 
+                consectetur adipiscing elit. Lacus, 
+                fermentum amet faucibus sed id nisi 
+                lectus at.</p>
+            </div>
+            <div class="my-recipies-one">
+                <img src="images/food/my-recipies3.jpg" alt="My-recipies-item">
+                <h4>Recipie Title</h4>
+                <p>Lorem ipsum dolor sit amet, 
+                consectetur adipiscing elit. Lacus, 
+                fermentum amet faucibus sed id nisi 
+                lectus at.</p>
+            </div>
+        </div>
+    </section>
     
 </body>
 </html>
