--- a/index.html
+++ b/index.html
@@ -41,7 +41,11 @@
         </div>
     </section>
     <section id="My-recipies">
-        <div class="section-title"></div>
+        <div class="section-title">
+            <h2>My-recipies</h2>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br>
+            Lorem Ipsum has been the industry's standard dummy text ever since the <br> 1500s.</p>
+        </div>
         <div class="my-recipies-inner">
             <div class="my-recipies-one">
                 <img src="images/food/my-recipies1.jpg" alt="My-recipies-item">
@@ -67,6 +71,22 @@
                 fermentum amet faucibus sed id nisi 
                 lectus at.</p>
             </div>
+        </div>
+    </section>
+    <section id="free-recips">
+        <div class="free-recips-left">
+            <img src="images/food/my-recipies5.png" alt="left-img">
+        </div>
+        <div class="free-recips-right">
+            <div class="free-recips-title">
+                <h2>sign up for weekly free recipes and plant-based lifestyle tips </h2>
+            </div>
+            <form action="">
+                <input type="text" placeholder="your name">
+                <input type="text" placeholder="your email">  
+            </form>
+            <button><a href="#">subscribe</a></button>
+            <span>No,Thanks</span>
         </div>
     </section>
     
