--- a/index.html
+++ b/index.html
@@ -86,9 +86,28 @@
                 <input type="text" placeholder="your email">  
             </form>
             <button><a href="#">subscribe</a></button>
-            <span>No,Thanks</span>
+            <span><a href="#">No,Thanks</a></span>
         </div>
     </section>
-    
+    <section id="counter">
+        <div class="counter-item-one">
+            <h2>700k</h2>
+            <span>youtube Subscribers</span>
+        </div>
+        <div class="counter-item-one">
+            <h2>2.5m</h2>
+            <span>nstagram Followers</span>
+        </div>
+        <div class="counter-item-one">
+            <h2>100k</h2>
+            <span>Dribbble Shot Likes</span>
+        </div>
+    </section>
+    <footer id="footer-area">
+        <div class="footer-area-inner">
+            <h4><span>FOOD</span>  NETWORK</h4>
+            <p>Eat healthy to live healthy. Live healthy to live happy.</p>
+        </div>
+    </footer>
 </body>
 </html>
